# Pricing-Engine

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
Dashboard/: app.py
Notebooks/: 01_data_preparation.ipynb  02_eda.ipynb  03_feature_engineering.ipynb  04_demand_forecasting.ipynb  05_price_elasticity.ipynb  06_price_optimization.ipynb
WebApp/: __init__.py  main.py  service.py
WebApp/static/: styles.css
WebApp/templates/: base.html  error.html  index.html
api/: index.py
scripts/: build_app_artifacts.py
tests/: test_service.py
