[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing-engine"
version = "0.1.0"
description = "FastAPI pricing engine dashboard and recommendation service"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.111",
    "jinja2>=3.1",
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "plotly>=5.22",
    "scikit-learn>=1.3",
    "seaborn>=0.12",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]

[tool.vercel]
entrypoint = "WebApp.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["WebApp*"]

[tool.setuptools.package-data]
WebApp = ["templates/*.html", "static/*.css"]

[tool.ruff]
extend-exclude = ["Notebooks"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
